crates/service/tests/definition/snapshots/features__definition__goto_type_definition__func_ident_idx_type_use_ident_idx.snap
---
source: crates/service/tests/definition/goto_type_definition.rs
expression: response
---
{
  "uri": "untitled:test",
  "range": {
    "start": {
      "line": 2,
      "character": 10
    },
    "end": {
      "line": 2,
      "character": 15
    }
  }
}
