crates/service/tests/definition/snapshots/features__definition__goto_type_definition__global.snap
---
source: crates/service/tests/definition/goto_type_definition.rs
expression: response
---
{
  "uri": "untitled:test",
  "range": {
    "start": {
      "line": 2,
      "character": 8
    },
    "end": {
      "line": 2,
      "character": 10
    }
  }
}
