crates/service/tests/definition/snapshots/features__definition__goto_type_definition__local_ident_idx.snap
---
source: crates/service/tests/definition/goto_type_definition.rs
expression: response
---
{
  "uri": "untitled:test",
  "range": {
    "start": {
      "line": 2,
      "character": 3
    },
    "end": {
      "line": 2,
      "character": 7
    }
  }
}
